--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,9 +55,9 @@ jobs:
       - name: List Files
         run: ls -la
       - name: compress the build
-        run: zip -r dist.zip ./dist
+        run: zip -r build.zip ./build
       - name: Copy to prod server
-        run: scp -r ./dist.zip dev_server:/code/public
+        run: scp -r ./build.zip dev_server:/code/public
       - name: Update to Latest
         run: |
           ssh dev_server 'cd /code/public/ \
