--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_HOST_PATH="https://weblib3.cyclic.app"
+REACT_APP_HOST_PATH="https://api.library.haqnawaz.org"
 REACT_APP_LOCAL_PATH="http://localhost:5000"
